added ost content to index.html and started styling in css

--- a/index.html
+++ b/index.html
@@ -2,19 +2,94 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
-        <meta name="viewport" content=""/>
+        <meta name="description" content="Nature’s Veil — where natural elegance meets modern skincare. Explore our products and shop your favourites online.">
+        <meta name="keywords" content="beauty, cosmetics, skincare, haircare, Pure Bloom, makeup, online store">
+        <meta name="author" content="Bernadette Brits">
         <title>Nature's Veil | Home</title>
         <link rel="stylesheet" href="css/style.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/a2e0e9d6a8.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
-        <header>
-
+        <!--Navbar-->
+        <header class="navbar">
+            <div class="container nav-container">
+                <h1 class="logo">Nature’s Veil</h1>
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="shop.html">Shop</a>
+                    <a href="">My Account</a>
+                    <a href="cart.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </a>
+                </nav>
+            </div>
         </header>
         <main>
+            <!--Main Content-->
+            <section class="hero">
+                <div class="hero-overlay">
+                    <h2>Where Beauty Blossoms</h2>
+                    <p>Discover premium skin care that brings out your natural glow.</p>
+                    <a href="shop.html" class="btn-primary">Shop Now</a>
+                </div>
+            </section>
 
+            <section class="featured">
+                <h2>Featured Products</h2>
+                <div class="product-grid">
+                    <div class="product-card">
+                        <img src="" alt="">
+                        <h3></h3>
+                        <p></p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="" alt="">
+                        <h3></h3>
+                        <p></p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="" alt="">
+                        <h3></h3>
+                        <p></p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
     <footer>
-
+        <div>
+            <div class="footer-box">
+                <h3>Imformation</h3>
+                <a href="">Shipping</a><br>
+                <a href="">The Consumer Protection Act</a><br>
+                <a href="">T & C</a><br>
+                <a href="">Contact Us</a>
+            </div>
+            <div class="footer-box">
+                <h3>Customer Service</h3>
+                <a href="">Search</a><br>
+                <a href="">Recently viewed</a>
+            </div>
+            <div class="footer-box">
+                <h3>My Account</h3>
+                <a href="">My Account</a><br>
+                <a href="">Orders</a><br>
+                <a href="">Addresses</a><br>
+                <a href="">Shopping cart</a>
+                <a href="">Wishlist</a>
+            </div>
+        </div>
+        <div>
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <p>Copyrigth &copy; 2025 Nature’s Veil. All rights reserved.</p>
+        </div>    
     </footer>
 </html>
