added more styling to css for index.html

--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
                 <h2>Featured Products</h2>
                 <div class="product-grid">
                     <div class="product-card">
-                        <img src="" alt="">
+                        <img src="images/products/placeholder-img.png" alt="">
                         <h3></h3>
                         <p></p>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card">
-                        <img src="" alt="">
+                        <img src="images/products/placeholder-img.png" alt="">
                         <h3></h3>
                         <p></p>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card">
-                        <img src="" alt="">
+                        <img src="images/products/placeholder-img.png" alt="">
                         <h3></h3>
                         <p></p>
                         <button class="btn-add">Add to Cart</button>
@@ -64,15 +64,15 @@
         </main>
     </body>
     <footer>
-        <div>
-            <div class="footer-box">
-                <h3>Imformation</h3>
+        <section class="footer-container">
+            <div class="footer-box border">
+                <h3>Information</h3>
                 <a href="">Shipping</a><br>
                 <a href="">The Consumer Protection Act</a><br>
                 <a href="">T & C</a><br>
                 <a href="">Contact Us</a>
             </div>
-            <div class="footer-box">
+            <div class="footer-box border">
                 <h3>Customer Service</h3>
                 <a href="">Search</a><br>
                 <a href="">Recently viewed</a>
@@ -82,14 +82,14 @@
                 <a href="">My Account</a><br>
                 <a href="">Orders</a><br>
                 <a href="">Addresses</a><br>
-                <a href="">Shopping cart</a>
+                <a href="">Shopping cart</a><br>
                 <a href="">Wishlist</a>
             </div>
-        </div>
-        <div>
+        </section>
+        <section class="footer-end">
             <a href=""><i class="fa-brands fa-facebook"></i></a>
             <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <p>Copyrigth &copy; 2025 Nature’s Veil. All rights reserved.</p>
-        </div>    
+            <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
+        </section>    
     </footer>
 </html>
