added the link for font awesome to all pages for cart and other icons to work

--- a/cart.html
+++ b/cart.html
@@ -6,6 +6,7 @@
         <title>Pure Bloom Beauty | Cart</title>
         <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/a2e0e9d6a8.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <header class="navbar">
@@ -38,7 +39,8 @@
                         <!-- Dynamically rendered --></tbody>
                 </table>
                 <div class="cart-total">
-                    <h3>Total:
+                    <h3>
+                        Total:
                         <span id="totalAmount">R0.00</span>
                     </h3>
                     <button class="btn-primary" onclick="window.location.href='checkout.html'">Proceed to Checkout</button>
@@ -46,34 +48,46 @@
             </div>
         </section>
         <footer>
-        <section class="footer-container">
-            <div class="footer-box border">
-                <h3>Information</h3>
-                <a href="">Shipping</a><br>
-                <a href="">The Consumer Protection Act</a><br>
-                <a href="">T & C</a><br>
-                <a href="">Contact Us</a>
-            </div>
-            <div class="footer-box border">
-                <h3>Customer Service</h3>
-                <a href="">Search</a><br>
-                <a href="">Recently viewed</a>
-            </div>
-            <div class="footer-box">
-                <h3>My Account</h3>
-                <a href="">My Account</a><br>
-                <a href="">Orders</a><br>
-                <a href="">Addresses</a><br>
-                <a href="">Shopping cart</a><br>
-                <a href="">Wishlist</a>
-            </div>
-        </section>
-        <section class="footer-end">
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
-        </section>    
-    </footer>
+            <section class="footer-container">
+                <div class="footer-box border">
+                    <h3>Information</h3>
+                    <a href="">Shipping</a>
+                    <br>
+                    <a href="">The Consumer Protection Act</a>
+                    <br>
+                    <a href="">T & C</a>
+                    <br>
+                    <a href="">Contact Us</a>
+                </div>
+                <div class="footer-box border">
+                    <h3>Customer Service</h3>
+                    <a href="">Search</a>
+                    <br>
+                    <a href="">Recently viewed</a>
+                </div>
+                <div class="footer-box">
+                    <h3>My Account</h3>
+                    <a href="">My Account</a>
+                    <br>
+                    <a href="">Orders</a>
+                    <br>
+                    <a href="">Addresses</a>
+                    <br>
+                    <a href="">Shopping cart</a>
+                    <br>
+                    <a href="">Wishlist</a>
+                </div>
+            </section>
+            <section class="footer-end">
+                <a href="">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
+            </section>
+        </footer>
         <script src="js/cart.js"></script>
     </body>
 </html>
