--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pure Bloom Beauty | Checkout</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <header class="navbar">
@@ -50,7 +51,8 @@
                     >
                     <h3>Cart Summary</h3>
                     <div id="checkoutCart"></div>
-                    <p>Total:
+                    <p>
+                        Total:
                         <span id="checkoutTotal"></span>
                     </p>
                     <button type="submit" class="btn-primary">Place Order</button>
@@ -58,34 +60,46 @@
             </div>
         </section>
         <footer>
-        <section class="footer-container">
-            <div class="footer-box border">
-                <h3>Information</h3>
-                <a href="">Shipping</a><br>
-                <a href="">The Consumer Protection Act</a><br>
-                <a href="">T & C</a><br>
-                <a href="">Contact Us</a>
-            </div>
-            <div class="footer-box border">
-                <h3>Customer Service</h3>
-                <a href="">Search</a><br>
-                <a href="">Recently viewed</a>
-            </div>
-            <div class="footer-box">
-                <h3>My Account</h3>
-                <a href="">My Account</a><br>
-                <a href="">Orders</a><br>
-                <a href="">Addresses</a><br>
-                <a href="">Shopping cart</a><br>
-                <a href="">Wishlist</a>
-            </div>
-        </section>
-        <section class="footer-end">
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
-        </section>    
-    </footer>
+            <section class="footer-container">
+                <div class="footer-box border">
+                    <h3>Information</h3>
+                    <a href="">Shipping</a>
+                    <br>
+                    <a href="">The Consumer Protection Act</a>
+                    <br>
+                    <a href="">T & C</a>
+                    <br>
+                    <a href="">Contact Us</a>
+                </div>
+                <div class="footer-box border">
+                    <h3>Customer Service</h3>
+                    <a href="">Search</a>
+                    <br>
+                    <a href="">Recently viewed</a>
+                </div>
+                <div class="footer-box">
+                    <h3>My Account</h3>
+                    <a href="">My Account</a>
+                    <br>
+                    <a href="">Orders</a>
+                    <br>
+                    <a href="">Addresses</a>
+                    <br>
+                    <a href="">Shopping cart</a>
+                    <br>
+                    <a href="">Wishlist</a>
+                </div>
+            </section>
+            <section class="footer-end">
+                <a href="">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
+            </section>
+        </footer>
         <script>
     document.addEventListener('DOMContentLoaded', () => {
       const checkoutCart = document.getElementById('checkoutCart');
