--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,7 @@
     <body>
         <header class="navbar">
             <div class="container nav-container">
-                <h1 class="logo">Nature’s Veil</h1>
+                <img class="logo" src="images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png" alt="Nature's Veil Logo Image"/>
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="shop.html">Shop</a>
