Adjusted images in shop.html

--- a/product pages/product-1.html
+++ b/product pages/product-1.html
@@ -28,16 +28,16 @@
             <div class="container product-container">
                 <!-- Product Gallery -->
                 <div class="product-gallery">
-                    <img id="mainImage" src="../images/hero/placeholder-img.png" alt="Hydrating Glow Serum">
+                    <img id="mainImage" src="../images/hero/placeholder-img.png" alt="">
                     <div class="thumbnails">
-                        <img class="thumb" src="../images/hero/placeholder-img.png" alt="Hydrating Glow Serum">
-                        <img class="thumb" src="../images/hero/placeholder-img.png" alt="Hydrating Glow Serum">
-                        <img class="thumb" src="../images/hero/placeholder-img.png" alt="Hydrating Glow Serum">
+                        <img class="thumb" src="../images/hero/placeholder-img.png" alt="">
+                        <img class="thumb" src="../images/hero/placeholder-img.png" alt="">
+                        <img class="thumb" src="../images/hero/placeholder-img.png" alt="">
                     </div>
                 </div>
                 <!-- Product Info -->
                 <div class="product-info">
-                    <h2>Hydrating Glow Serum</h2>
+                    <h2></h2>
                     <p class="price">R299.00</p>
                     <p class="description">
                         This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
