--- a/shop.html
+++ b/shop.html
@@ -6,13 +6,19 @@
         <title>Pure Bloom Beauty | Shop</title>
         <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/a2e0e9d6a8.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+            integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        >
     </head>
     <body>
         <!--Navbar-->
         <header class="navbar">
             <div class="container nav-container">
-                <img class="logo" src="images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png" alt="Nature's Veil Logo Image"/>
+                <img class="logo" src="images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png" alt="Nature's Veil Logo Image">
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="shop.html">Shop</a>
@@ -30,33 +36,162 @@
                 <aside class="sidebar">
                     <ul>
                         <li data-category="all" class="active">All</li>
-                        <li data-category="skincare">Skincare</li>
-                        <li data-category="makeup">Makeup</li>
+                        <li data-category="face">Face Care</li>
+                        <li data-category="body">Body Care</li>
+                        <!-- Lifestyle with dropdown -->
+                        <li class="has-dropdown" data-category="lifestyle">
+                            Lifestyle
+                            <i class="fa-solid fa-caret-down"></i>
+                            <ul class="dropdown">
+                                <li data-category="shakes">Shakes</li>
+                                <li data-category="vitamins">Vitamins</li>
+                            </ul>
+                        </li>
                         <li data-category="hair">Hair</li>
                     </ul>
                 </aside>
                 <!-- Products -->
                 <div class="product-grid">
-                    <div class="product-card" data-category="skincare">
+                    <div class="product-card" data-category="face">
                         <a href="product.html?product=serum">
-                            <img src="images/products/serum.jpg" alt="Hydrating Glow Serum">
-                            <h3>Hydrating Glow Serum</h3>
+                            <img src="images/products/Nature's Veil Day cream.png" alt="Day Cream Image">
+                            <h3>Day Cream</h3>
                         </a>
                         <p>R299.00</p>
                         <button class="btn-add">Add to Cart</button>
                     </div>
-                    <div class="product-card" data-category="makeup">
+                    <div class="product-card" data-category="face">
+                        <a href="product.html?product=serum">
+                            <img src="images/products/Nature's Veil Night cream.png" alt="Night Cream Image">
+                            <h3>Night Cream</h3>
+                        </a>
+                        <p>R299.00</p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card" data-category="face">
+                        <a href="product.html?product=serum">
+                            <img src="images/products/Nature's Veil Soap.png" alt="Face Cleanser Image">
+                            <h3>Face Cleanser</h3>
+                        </a>
+                        <p>R299.00</p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card" data-category="face">
+                        <a href="product.html?product=serum">
+                            <img src="images/products/Nature's Veil Exfoliator.png" alt="Exfoliator Image">
+                            <h3>Exfoliatior</h3>
+                        </a>
+                        <p>R299.00</p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card" data-category="face">
+                        <a href="product.html?product=serum">
+                            <img src="images/products/Nature's Veil Face mask.png" alt="Face Mask Image">
+                            <h3>Face Mask</h3>
+                        </a>
+                        <p>R299.00</p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card" data-category="body">
                         <a href="product.html?product=lipstick">
-                            <img src="images/products/lipstick.jpg" alt="Velvet Matte Lipstick">
-                            <h3>Velvet Matte Lipstick</h3>
+                            <img src="images/products/Nature's Veil Body Lotion.png" alt="Body Lotion Image">
+                            <h3>Body Lotion</h3>
+                        </a>
+                        <p>R199.00</p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card" data-category="body">
+                        <a href="product.html?product=lipstick">
+                            <img src="images/products/Nature's Veil Body Wash.png" alt="Shower Gel Image">
+                            <h3>Shower Gel</h3>
+                        </a>
+                        <p>R199.00</p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card" data-category="body">
+                        <a href="product.html?product=lipstick">
+                            <img src="images/products/Nature's Veil Body Butter.png" alt="Body Butter Image">
+                            <h3>Body Butter</h3>
+                        </a>
+                        <p>R199.00</p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card" data-category="body">
+                        <a href="product.html?product=lipstick">
+                            <img src="images/products/Nature's Veil Hand cream (1).png" alt="Hand Cream Image">
+                            <h3>Hand Cream</h3>
                         </a>
                         <p>R199.00</p>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="hair">
                         <a href="product.html?product=shampoo">
-                            <img src="images/products/shampoo.jpg" alt="Nourishing Shampoo">
-                            <h3>Nourishing Shampoo</h3>
+                            <img src="images/products/Nature's Veil Shampoo.png" alt="Shampoo Image">
+                            <h3>Shampoo</h3>
+                        </a>
+                        <p>R149.00</p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card" data-category="hair">
+                        <a href="product.html?product=shampoo">
+                            <img src="images/products/Nature's Veil Conditioner.png" alt="Conditioner Image">
+                            <h3>Conditioner</h3>
+                        </a>
+                        <p>R149.00</p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card" data-category="shakes">
+                        <a href="product.html?product=shampoo">
+                            <img src="images/products/Nature's Veil Shake Vanilla.png" alt="Shake Vanilla Image">
+                            <h3>Lifestyle Shake Vanilla</h3>
+                        </a>
+                        <p>R149.00</p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card" data-category="shakes">
+                        <a href="product.html?product=shampoo">
+                            <img src="images/products/Nature's Veil shake strawberry.png" alt="Shake Strawberry Image">
+                            <h3>Lifestyle Shake Strawberry</h3>
+                        </a>
+                        <p>R149.00</p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card" data-category="shakes">
+                        <a href="product.html?product=shampoo">
+                            <img src="images/products/Nature's Veil shake chocolate.png" alt="Shake Chocolate Image">
+                            <h3>Lifestyle Shake Chocolate</h3>
+                        </a>
+                        <p>R149.00</p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card" data-category="vitamins">
+                        <a href="product.html?product=shampoo">
+                            <img src="images/products/Nature's Veil Iron.png" alt="Iron Vitamin Image">
+                            <h3>Iron</h3>
+                        </a>
+                        <p>R149.00</p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card" data-category="vitamins">
+                        <a href="product.html?product=shampoo">
+                            <img src="images/products/Nature's Veil Vitamin C.png" alt="Vitamin C Image">
+                            <h3>Vitamin C</h3>
+                        </a>
+                        <p>R149.00</p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card" data-category="vitamins">
+                        <a href="product.html?product=shampoo">
+                            <img src="images/products/Nature's Veil D3 & K2.png" alt="D3 & K2 Vitamin Image">
+                            <h3>D3 & K2</h3>
+                        </a>
+                        <p>R149.00</p>
+                        <button class="btn-add">Add to Cart</button>
+                    </div>
+                    <div class="product-card" data-category="vitamins">
+                        <a href="product.html?product=shampoo">
+                            <img src="images/products/Nature's Veil Zinc.png" alt="Zinc Vitamin Image">
+                            <h3>Zinc</h3>
                         </a>
                         <p>R149.00</p>
                         <button class="btn-add">Add to Cart</button>
