--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8"/>
+        <meta charset="UTF-8">
         <meta name="description" content="Nature’s Veil — where natural elegance meets modern skincare. Explore our products and shop your favourites online.">
         <meta name="keywords" content="beauty, cosmetics, skincare, haircare, Pure Bloom, makeup, online store">
         <meta name="author" content="Bernadette Brits">
         <title>Nature's Veil | Home</title>
-        <link rel="stylesheet" href="css/style.css"/>
+        <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/a2e0e9d6a8.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+            integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        >
     </head>
     <body>
         <!--Navbar-->
         <header class="navbar">
             <div class="container nav-container">
-                <img class="logo" src="images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png" alt="Nature's Veil Logo Image"/>
+                <img class="logo" src="images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png" alt="Nature's Veil Logo Image">
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="shop.html">Shop</a>
@@ -37,59 +43,77 @@
                     <a href="shop.html" class="btn-primary">Shop Now</a>
                 </div>
             </section>
-
             <section class="featured">
                 <h2>Featured Products</h2>
                 <div class="product-grid">
                     <div class="product-card">
-                        <img src="images/products/placeholder-img.png" alt="">
-                        <h3></h3>
-                        <p></p>
+                        <a href="product pages/bodylotion.html?product=bodylotion">
+                            <img src="images/products/Nature's Veil Body Lotion.png" alt="Body Lotion Image">
+                            <h3>Body Lotion</h3>
+                            <p>R199.00</p>
+                        </a>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card">
-                        <img src="images/products/placeholder-img.png" alt="">
-                        <h3></h3>
-                        <p></p>
+                        <a href="product pages/shakevanilla.html?product=shakevanilla">
+                            <img src="images/products/Nature's Veil Shake Vanilla.png" alt="Shake Vanilla Image">
+                            <h3>Lifestyle Shake Vanilla</h3>
+                            <p>R149.00</p>
+                        </a>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card">
-                        <img src="images/products/placeholder-img.png" alt="">
-                        <h3></h3>
-                        <p></p>
+                        <a href="product pages/daycream.html?product=daycream">
+                            <img src="images/products/Nature's Veil Day cream.png" alt="Day Cream Image">
+                            <h3>Day Cream</h3>
+                            <p>R299.00</p>
+                        </a>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                 </div>
             </section>
         </main>
+        <footer>
+            <section class="footer-container">
+                <div class="footer-box border">
+                    <h3>Information</h3>
+                    <a href="">Shipping</a>
+                    <br>
+                    <a href="">The Consumer Protection Act</a>
+                    <br>
+                    <a href="">T & C</a>
+                    <br>
+                    <a href="">Contact Us</a>
+                </div>
+                <div class="footer-box border">
+                    <h3>Customer Service</h3>
+                    <a href="">Search</a>
+                    <br>
+                    <a href="">Recently viewed</a>
+                </div>
+                <div class="footer-box">
+                    <h3>My Account</h3>
+                    <a href="">My Account</a>
+                    <br>
+                    <a href="">Orders</a>
+                    <br>
+                    <a href="">Addresses</a>
+                    <br>
+                    <a href="">Shopping cart</a>
+                    <br>
+                    <a href="">Wishlist</a>
+                </div>
+            </section>
+            <section class="footer-end">
+                <a href="">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
+            </section>
+        </footer>
+        <script src="js/shop.js"></script>
     </body>
-    <footer>
-        <section class="footer-container">
-            <div class="footer-box border">
-                <h3>Information</h3>
-                <a href="">Shipping</a><br>
-                <a href="">The Consumer Protection Act</a><br>
-                <a href="">T & C</a><br>
-                <a href="">Contact Us</a>
-            </div>
-            <div class="footer-box border">
-                <h3>Customer Service</h3>
-                <a href="">Search</a><br>
-                <a href="">Recently viewed</a>
-            </div>
-            <div class="footer-box">
-                <h3>My Account</h3>
-                <a href="">My Account</a><br>
-                <a href="">Orders</a><br>
-                <a href="">Addresses</a><br>
-                <a href="">Shopping cart</a><br>
-                <a href="">Wishlist</a>
-            </div>
-        </section>
-        <section class="footer-end">
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
-        </section>    
-    </footer>
 </html>
