--- a/shop.html
+++ b/shop.html
@@ -22,7 +22,7 @@
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="shop.html">Shop</a>
-                    <a href="">My Account</a>
+                    <a href="account.html" id="accountLink">My Account</a>
                     <a href="cart.html">
                         <i class="fa-solid fa-cart-shopping"></i>
                     </a>
