added js script to all pages

--- a/account.html
+++ b/account.html
@@ -113,5 +113,6 @@
             </section>
         </footer>
         <script src="js/account.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
