--- a/cart.html
+++ b/cart.html
@@ -89,5 +89,6 @@
             </section>
         </footer>
         <script src="js/cart.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
