--- a/shop.html
+++ b/shop.html
@@ -242,5 +242,6 @@
         </footer>
         <!-- JS at the end of body -->
         <script src="js/shop.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
