--- a/index.html
+++ b/index.html
@@ -115,5 +115,6 @@
             </section>
         </footer>
         <script src="js/shop.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
