--- a/shop.html
+++ b/shop.html
@@ -19,12 +19,14 @@
         <header class="navbar">
             <div class="container nav-container">
                 <img class="logo" src="images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png" alt="Nature's Veil Logo Image">
+                <div class="menu-toggle"><i class="fa-solid fa-bars"></i></div>
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="shop.html">Shop</a>
                     <a href="account.html" id="accountLink">My Account</a>
                     <a href="cart.html">
                         <i class="fa-solid fa-cart-shopping"></i>
+                        <span class="cart-count" id="cartCount">0</span>
                     </a>
                 </nav>
             </div>
@@ -58,6 +60,7 @@
                             <h3>Day Cream</h3>
                         </a>
                         <p>R299.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="face">
@@ -66,6 +69,7 @@
                             <h3>Night Cream</h3>
                         </a>
                         <p>R299.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="face">
@@ -74,6 +78,7 @@
                             <h3>Face Cleanser</h3>
                         </a>
                         <p>R299.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="face">
@@ -82,6 +87,7 @@
                             <h3>Exfoliatior</h3>
                         </a>
                         <p>R299.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="face">
@@ -90,6 +96,7 @@
                             <h3>Face Mask</h3>
                         </a>
                         <p>R299.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="body">
@@ -98,6 +105,7 @@
                             <h3>Body Lotion</h3>
                         </a>
                         <p>R199.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="body">
@@ -106,6 +114,7 @@
                             <h3>Shower Gel</h3>
                         </a>
                         <p>R199.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="body">
@@ -114,6 +123,7 @@
                             <h3>Body Butter</h3>
                         </a>
                         <p>R199.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="body">
@@ -122,6 +132,7 @@
                             <h3>Hand Cream</h3>
                         </a>
                         <p>R199.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="hair">
@@ -130,6 +141,7 @@
                             <h3>Shampoo</h3>
                         </a>
                         <p>R149.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="hair">
@@ -138,6 +150,7 @@
                             <h3>Conditioner</h3>
                         </a>
                         <p>R149.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="shakes">
@@ -146,6 +159,7 @@
                             <h3>Lifestyle Shake Vanilla</h3>
                         </a>
                         <p>R149.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="shakes">
@@ -154,6 +168,7 @@
                             <h3>Lifestyle Shake Strawberry</h3>
                         </a>
                         <p>R149.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="shakes">
@@ -162,6 +177,7 @@
                             <h3>Lifestyle Shake Chocolate</h3>
                         </a>
                         <p>R149.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="vitamins">
@@ -170,6 +186,7 @@
                             <h3>Iron</h3>
                         </a>
                         <p>R149.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="vitamins">
@@ -178,6 +195,7 @@
                             <h3>Vitamin C</h3>
                         </a>
                         <p>R149.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="vitamins">
@@ -186,6 +204,7 @@
                             <h3>D3 & K2</h3>
                         </a>
                         <p>R149.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="vitamins">
@@ -194,10 +213,15 @@
                             <h3>Zinc</h3>
                         </a>
                         <p>R149.00</p>
+                        <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="recently-viewed">
+            <h3>Recently Viewed</h3>
+            <ul id="recentList"></ul>
         </section>
         <footer>
             <section class="footer-container">
@@ -243,5 +267,13 @@
         <!-- JS at the end of body -->
         <script src="js/shop.js"></script>
         <script src="js/main.js"></script>
+        <!-- Display recently viewed-->
+        <script>
+const list = document.getElementById('recentList');
+if (list) {
+  const viewed = JSON.parse(localStorage.getItem('recentlyViewed') || '[]');
+  list.innerHTML = viewed.length ? viewed.map(v => `<li>${v}</li>`).join('') : '<li>No products yet.</li>';
+}
+        </script>
     </body>
 </html>
