--- a/cart.html
+++ b/cart.html
@@ -12,6 +12,7 @@
         <header class="navbar">
             <div class="container nav-container">
                 <img class="logo" src="images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png" alt="Nature's Veil Logo Image"/>
+                <div class="menu-toggle"><i class="fa-solid fa-bars"></i></div>
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="shop.html">Shop</a>
