--- a/checkout.html
+++ b/checkout.html
@@ -24,6 +24,7 @@
                     <a href="account.html" id="accountLink">My Account</a>
                     <a href="cart.html">
                         <i class="fa-solid fa-cart-shopping"></i>
+                        <span class="cart-count" id="cartCount">0</span>
                     </a>
                 </nav>
             </div>
