adjusted class of nav on all pages for hamburger menu to work

--- a/account.html
+++ b/account.html
@@ -13,7 +13,7 @@
             <div class="container nav-container">
                 <img class="logo" src="images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png" alt="Nature's Veil Logo">
                 <div class="menu-toggle"><i class="fa-solid fa-bars"></i></div>
-                <nav>
+                <nav class="nav-links">
                     <a href="index.html">Home</a>
                     <a href="shop.html">Shop</a>
                     <a href="account.html" id="accountLink">My Account</a>
