added hero image and adjusted css accordingly

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="index.html">Home</a>
                     <a href="shop.html">Shop</a>
                     <a href="account.html" id="accountLink">My Account</a>
-                    <a href="cart.html">
+                    <a href="cart.html" class="cart-nav">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <span class="cart-count" id="cartCount">0</span>
                     </a>
@@ -39,6 +39,7 @@
         <main>
             <!--Main Content-->
             <section class="hero">
+                <img src="images/hero/hero banner.png" alt="">
                 <div class="hero-overlay">
                     <h2>Where Beauty Blossoms</h2>
                     <p>Discover premium skin care that brings out your natural glow.</p>
