fixed some pages titles to say brand name

--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pure Bloom Beauty | Shop</title>
+        <title>Nature's Veil | Shop</title>
         <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/a2e0e9d6a8.js" crossorigin="anonymous"></script>
         <link
