adjusted content to most of the product pages so long and started adding content to readme

--- a/product pages/shakestrawberry.html
+++ b/product pages/shakestrawberry.html
@@ -12,7 +12,7 @@
         <!-- Navbar -->
         <header class="navbar">
             <div class="container nav-container">
-                <img class="logo" src="images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png" alt="Nature's Veil Logo Image"/>
+                <img class="logo" src="../images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png" alt="Nature's Veil Logo Image"/>
                 <div class="menu-toggle"><i class="fa-solid fa-bars"></i></div>
                 <nav class="nav-links">
                     <a href="../index.html">Home</a>
@@ -30,16 +30,11 @@
             <div class="container product-container">
                 <!-- Product Gallery -->
                 <div class="product-gallery">
-                    <img id="mainImage" src="../images/hero/placeholder-img.png" alt="">
-                    <div class="thumbnails">
-                        <img class="thumb" src="../images/hero/placeholder-img.png" alt="">
-                        <img class="thumb" src="../images/hero/placeholder-img.png" alt="">
-                        <img class="thumb" src="../images/hero/placeholder-img.png" alt="">
-                    </div>
+                    <img id="mainImage" src="../images/products/Nature's Veil shake strawberry.png" alt="Strawberry Shake image">
                 </div>
                 <!-- Product Info -->
                 <div class="product-info">
-                    <h2></h2>
+                    <h2>Lifestyle Shake Strawberry</h2>
                     <p class="price">R299.00</p>
                     <p class="description">
                         This luxurious hydrating serum rejuvenates your skin, leaving it soft, smooth, and radiant. Formulated with natural extracts to enhance your glow.
@@ -68,16 +63,23 @@
                 <h3>You may also like</h3>
                 <div class="product-grid">
                     <div class="product-card">
-                        <a href="product.html?product=cream">
-                            <img src="../images/hero/placeholder-img.png" alt="HydraGlow Day Cream">
-                            <h3>HydraGlow Day Cream</h3>
+                        <a href="nightcream.html?product=nightcream">
+                            <img src="../images/products/Nature's Veil Night cream.png" alt="Night Cream image">
+                            <h3>Night Cream</h3>
                         </a>
                         <p>R249.00</p>
                     </div>
                     <div class="product-card">
-                        <a href="product.html?product=lipgloss">
-                            <img src="../images/hero/placeholder-img.png" alt="Silky Shine Lip Gloss">
-                            <h3>Silky Shine Lip Gloss</h3>
+                        <a href="shampoo.html?product=shampoo">
+                            <img src="../images/products/Nature's Veil Shampoo.png" alt="Shampoo image">
+                            <h3>Shampoo</h3>
+                        </a>
+                        <p>R189.00</p>
+                    </div>
+                    <div class="product-card">
+                        <a href="zinc.html?products=zinc">
+                            <img src="../images/products/Nature's Veil Zinc.png" alt="Zinc image">
+                            <h3>Zinc</h3>
                         </a>
                         <p>R189.00</p>
                     </div>
